[CHORE] Dockerfile 추가
- 빌드용 Dockerfile 추가